more refactoring, moving requests to data package.
